Formatacao do como funciona e facilidade

--- a/index.html
+++ b/index.html
@@ -40,55 +40,81 @@
             </div>
         </section>
         <section id="content">
-            <div class="container">
+            <div class="container como-funciona">
                 <h2>Como funciona o o.s. simples?</h2>
                 <div class="grid-2">
                     <h4>Orçamento</h4>
+                    <img src="assets/images/icon-orcamento.png">
                     <p>É criado um orçamento com a descrição do serviço que é enviado para o cliente.</p>
                 </div>
 
                 <div class="grid-2">
                     <h4>Aprovação</h4>
+                    <img src="assets/images/icon-aprovacao.png">
                     <p>O cliente aprova o orçamento.</p>
                 </div>
 
                 <div class="grid-2">
                     <h4>Pendente</h4>
+                    <img src="assets/images/icon-pendente.png">
                     <p>Você acompanha o estado de cada O.S. em uma lista.</p>
                 </div>
 
                 <div class="grid-2">
                     <h4>Execução</h4>
+                    <img src="assets/images/icon-execucao.png">
                     <p>A O.S. será executada por um funcionário da empresa.</p>
                 </div>
 
                 <div class="grid-2">
                     <h4>Finalizada</h4>
+                    <img src="assets/images/icon-finalizada.png">
                     <p>Isso indica que o serviço foi executado.</p>
                 </div>
 
                 <div class="grid-2">
                     <h4>Contato</h4>
+                    <img src="assets/images/icon-contato.png">
                     <p>Você pode avisar o seu cliente por E-mail ou SMS.</p>
                 </div>
 
-                <a class="btn" title="Cadastre-se">Cadastre-se</a>
-
+                <div class="grid-12">
+                    <a class="btn" href="#" title="Cadastre-se">Cadastre-se</a>
+                </div>
             </div>
-            <div class="container">
+            <div class="container facilidades">
                 <h2>Facilidades para o dia-a-dia!</h2>
 
                 <ul>
-                    <li>Acompanhamentoda O.S.</li>
-                    <li>Envie orçamento para os clientes</li>
-                    <li>Relatório de serviços prestados</li>
-                    <li>Acesse de qualquer lugar</li>
-                    <li>Disponivel para diversos dispositivos</li>
-                    <li>Integração com sistema financeiro*</li>
+                    <li class="grid-4">
+                        <img src="assets/images/icon-acompanhamento.png">
+                        <p>Acompanhamento da O.S.</p>
+                    </li>
+                    <li class="grid-4">
+                        <img src="assets/images/icon-acompanhamento.png">
+                        <p>Envie orçamento para os clientes</p>
+                    </li>
+                    <li class="grid-4">
+                        <img src="assets/images/icon-relatorio.png">
+                        <p>Relatório de serviços prestados</p>
+                    </li>
+                    <li class="grid-4">
+                        <img src="assets/images/icon-nuvem.png">
+                        <p>Acesse de qualquer lugar</p>
+                    </li>
+                    <li class="grid-4">
+                        <img src="assets/images/icon-mobile.png">
+                        <p>Disponivel para diversos dispositivos</p>
+                    </li>
+                    <li class="grid-4">
+                        <img src="assets/images/icon-granatum.png">
+                        <p>Integração com sistema financeiro*</p>
+                    </li>
                 </ul>
             </div>
         </section>
         <section id="form">
+            <h2>Experimente, é simples e rápido!</h2>
             <div class="container">
                 <form action="//api.formspree.com/jeff@webgoal.com.br">
                     <input type="text" name="name">
