Formatacao do form e rodape

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>o.s. simples</title>
+        <title>O.S. Simples - Sistema de coontrole de ordem de serviço online</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -117,15 +117,17 @@
             <h2>Experimente, é simples e rápido!</h2>
             <div class="container">
                 <form action="//api.formspree.com/jeff@webgoal.com.br">
-                    <input type="text" name="name">
-                    <input type="email" name="_replyto">
-                    <input type="submit" value="Send">
+                    <input type="text" name="name" placeholder="Nome">
+                    <input type="email" name="_replyto" placeholder="E-mail">
+                    <input type="submit" value="Cadastre-se">
                 </form>
             </div>
         </section>
         <section id="footer">
             <div class="container">
-                <a class="logo-mini" href="#" title="o.s. simples">o.s. simples</a>
+                <a class="logo-mini" href="#" title="o.s. simples">
+                    <img src="assets/images/logo-mini.png">
+                </a>
                 <p>é desenvolvido pela <a href="http://www.webgoal.com.br" title="Webgoal">Webgoal</a></p>
             </div>
         </section>
