Efeito com Scroll

--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
         <link rel="stylesheet" href="assets/css/fonts.css">
         <link rel="stylesheet" href="assets/css/struture.css">
         <link rel="stylesheet" href="assets/css/main.css">
+        
+        <script src="assets/js/jquery-1.7.2.js"></script>
+        <script src="assets/js/scroll.js"></script>
         <script src="assets/js/modernizr-2.6.2.min.js"></script>
+        <script src="assets/js/script.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <section id="top">
+        <section id="topo">
             <div class="container">
                 <h1><a class="logo" href="#" title="o.s. simples">o.s. simples</a></h1>
                     <nav>
-                        <a href="#" title="Como funciona?">Como funciona?</a>
-                        <a href="#" title="Funcionalidades">Funcionalidades</a>
-                        <a href="#" title="Cadastre-se">Cadastre-se</a>
+                        <a href="#como-funciona" title="Como funciona?">Como funciona?</a>
+                        <a href="#funcionalidades" title="Funcionalidades">Funcionalidades</a>
+                        <a href="#form" title="Cadastre-se">Cadastre-se</a>
                     </nav>
             </div>
         </section>
@@ -36,11 +40,11 @@
             <div class="container">
                 <h2>Simplifique o controle das ordens de serviços</h2>
                 <h3><span>o.s. simples</span> é um sistema online de controle de ordem de serviço para micro e pequenas empresas.</h3>
-                <a class="btn" href="#" title="Cadastre-se">Cadastre-se</a>
+                <a class="btn" href="#form" title="Cadastre-se">Cadastre-se</a>
             </div>
         </section>
         <section id="content">
-            <div class="container como-funciona">
+            <div id="como-funciona" class="container como-funciona">
                 <h2>Como funciona o o.s. simples?</h2>
                 <div class="grid-2">
                     <h4>Orçamento</h4>
@@ -82,7 +86,7 @@
                     <a class="btn" href="#" title="Cadastre-se">Cadastre-se</a>
                 </div>
             </div>
-            <div class="container facilidades">
+            <div id="funcionalidades" class="container facilidades">
                 <h2>Facilidades para o dia-a-dia!</h2>
 
                 <ul>
@@ -125,7 +129,7 @@
         </section>
         <section id="footer">
             <div class="container">
-                <a class="logo-mini" href="#" title="o.s. simples">
+                <a class="logo-mini" href="#topo" title="o.s. simples">
                     <img src="assets/images/logo-mini.png">
                 </a>
                 <p>é desenvolvido pela <a href="http://www.webgoal.com.br" title="Webgoal">Webgoal</a></p>
