Codigo do analitycs e do mixpanel

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <script src="assets/js/scroll.js"></script>
         <script src="assets/js/modernizr-2.6.2.min.js"></script>
         <script src="assets/js/script.js"></script>
+
+        <!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
+for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
+mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
+    
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -40,7 +45,7 @@
             <div class="container">
                 <h2>Simplifique o controle das ordens de serviços</h2>
                 <h3><span>o.s. simples</span> é um sistema online de controle de ordem de serviço para micro e pequenas empresas.</h3>
-                <a class="btn" href="#form" title="Cadastre-se">Cadastre-se</a>
+                <a id="btn-one" class="btn" href="#form" title="Cadastre-se">Cadastre-se</a>
             </div>
         </section>
         <section id="content">
@@ -83,7 +88,7 @@
                 </div>
 
                 <div class="grid-12">
-                    <a class="btn" href="#" title="Cadastre-se">Cadastre-se</a>
+                    <a id="btn-two" class="btn" href="#form" title="Cadastre-se">Cadastre-se</a>
                 </div>
             </div>
             <div id="funcionalidades" class="container facilidades">
@@ -120,7 +125,7 @@
         <section id="form">
             <h2>Experimente, é simples e rápido!</h2>
             <div class="container">
-                <form action="//api.formspree.com/jeff@webgoal.com.br">
+                <form action="http://forms.brace.io/jeff@webgoal.com.br" method="post">
                     <input type="text" name="name" placeholder="Nome">
                     <input type="email" name="_replyto" placeholder="E-mail">
                     <input type="submit" value="Cadastre-se">
@@ -139,12 +144,14 @@
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-46595816-3', 'ossimples.com.br');
+          ga('send', 'pageview');
+
         </script>
     </body>
 </html>
