--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
         <section id="form">
             <h2>Experimente, é simples e rápido!</h2>
             <div class="container">
-                <form action="http://forms.brace.io/jeff@webgoal.com.br" method="Post">
+                <form action="http://forms.brace.io/jeff@webgoal.com.br" method="POST">
                     <input type="text" name="name" placeholder="Nome">
                     <input type="email" name="_replyto" placeholder="E-mail">
                     <input type="submit" value="Cadastre-se">
