--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
             <h2>Experimente, é simples e rápido!</h2>
             <div class="container">
                 <form action="http://forms.brace.io/jeff@webgoal.com.br" method="POST">
+                    <input type="hidden" name="_next" value="//site.io/thanks.html" />
                     <input type="text" name="name" placeholder="Nome">
                     <input type="email" name="_replyto" placeholder="E-mail">
                     <input type="submit" value="Cadastre-se">
@@ -141,8 +142,6 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
             </div>
         </section>
         
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
