Link no form para redirecionar para a tela de obrigado

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
             <h2>Experimente, é simples e rápido!</h2>
             <div class="container">
                 <form action="http://forms.brace.io/jeff@webgoal.com.br" method="POST">
-                    <input type="hidden" name="_next" value="//site.io/thanks.html" />
+                    <input type="hidden" name="_next" value="http://www.ossimples.com.br/obrigado.html" />
                     <input type="text" name="name" placeholder="Nome">
                     <input type="email" name="_replyto" placeholder="E-mail">
                     <input type="submit" value="Cadastre-se">
