Ajuste no menu superior e criacao do favicon

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
                     <nav>
                         <a href="#como-funciona" title="Como funciona?">Como funciona?</a>
                         <a href="#funcionalidades" title="Funcionalidades">Funcionalidades</a>
-                        <a href="#form" title="Cadastre-se">Cadastre-se</a>
+                        <a href="#form" title="Cadastre-se"><span>Cadastre-se</span></a>
                     </nav>
             </div>
         </section>
