Site com favicon

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="assets/css/struture.css">
         <link rel="stylesheet" href="assets/css/main.css">
 
-        <link href="asstes/images/favicon.png" rel="icon" sizes="32x32" type="image/x-icon" />
+        <link href="favicon.png" rel="icon" sizes="32x32" type="image/x-icon" />
         
         <script src="assets/js/jquery-1.7.2.js"></script>
         <script src="assets/js/scroll.js"></script>
