Track botao submite view thanks

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
                     <input type="hidden" name="_next" value="http://www.ossimples.com.br/obrigado.html" />
                     <input type="text" name="name" placeholder="Nome">
                     <input type="email" name="_replyto" placeholder="E-mail">
-                    <input type="submit" value="Cadastre-se">
+                    <input id="btn-submit" type="submit" value="Cadastre-se">
                 </form>
             </div>
         </section>
