Teste do mixpanel.

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
         <section id="topo">
             <div class="container">
                 <h1><a class="logo" href="#" title="o.s. simples">o.s. simples</a></h1>
-                    <nav>
-                        <a href="#como-funciona" title="Como funciona?">Como funciona?</a>
-                        <a href="#funcionalidades" title="Funcionalidades">Funcionalidades</a>
-                        <a href="#form" title="Cadastre-se"><span>Cadastre-se</span></a>
-                    </nav>
+                <nav>
+                    <a href="#como-funciona" title="Como funciona?">Como funciona?</a>
+                    <a href="#funcionalidades" title="Funcionalidades">Funcionalidades</a>
+                    <a href="#form" title="Cadastre-se"><span>Cadastre-se</span></a>
+                </nav>
             </div>
         </section>
         
@@ -131,7 +131,7 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
                     <input type="hidden" name="_next" value="http://www.ossimples.com.br/obrigado.html" />
                     <input type="text" name="name" placeholder="Nome">
                     <input type="email" name="_replyto" placeholder="E-mail">
-                    <input id="btn-submit" type="submit" value="Cadastre-se">
+                    <input type="submit" value="Cadastre-se" id="btn-submit">
                 </form>
             </div>
         </section>
