--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script src="assets/js/scroll.js"></script>
         <script src="assets/js/modernizr-2.6.2.min.js"></script>
         <script src="assets/js/script.js"></script>
+        <script src="assets/js/track.home.js"></script>
 
         <!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
 for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
@@ -129,8 +130,8 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
             <div class="container">
                 <form action="http://forms.brace.io/jeff@webgoal.com.br" method="POST">
                     <input type="hidden" name="_next" value="http://www.ossimples.com.br/obrigado.html" />
-                    <input type="text" name="name" placeholder="Nome">
-                    <input type="email" name="_replyto" placeholder="E-mail">
+                    <input type="text" name="name" placeholder="Nome" id="nome">
+                    <input type="email" name="_replyto" placeholder="E-mail" id="email">
                     <input type="button" value="Cadastre-se" id="btn-submit">
                 </form>
             </div>
@@ -148,14 +149,10 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
 
             ga('create', 'UA-46595816-3', 'ossimples.com.br');
             ga('send', 'pageview');
-
-            mixpanel.track("access_page", {
-                "page": "home"
-            });
         </script>
     </body>
 </html>
