Alteracao do icone de orcamento na timeline e nas funcionalidades

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
                         <p>Acompanhamento da O.S.</p>
                     </li>
                     <li class="grid-4">
-                        <img src="assets/images/icon-acompanhamento.png">
+                        <img src="assets/images/icon-enviar.png">
                         <p>Envie orçamento para os clientes</p>
                     </li>
                     <li class="grid-4">
@@ -116,7 +116,7 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
                     </li>
                     <li class="grid-4">
                         <img src="assets/images/icon-mobile.png">
-                        <p>Disponivel para diversos dispositivos</p>
+                        <p>Disponível para diversos dispositivos</p>
                     </li>
                     <li class="grid-4">
                         <img src="assets/images/icon-granatum.png">
