Texto integracao com o Granatum

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
                     <li class="grid-4">
                         <img src="assets/images/icon-granatum.png">
                         <p>Integração com sistema financeiro*</p>
+                        <span>*Intergração com o sistema financeiro <a href="http://www.granatum.com.br" title="Sistema Financeiro Online para Micro e Pequenas Empresas - Granatum">Granatum</a></span>
                     </li>
                 </ul>
             </div>
