--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         <!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
 for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
 mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
-    
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -129,11 +128,10 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
         <section id="form">
             <h2>Experimente, é simples e rápido!</h2>
             <div class="container">
-                <form action="http://forms.brace.io/jeff@webgoal.com.br" method="POST" id="cadastro">
-                    <input type="hidden" name="_next" value="http://www.ossimples.com.br/obrigado.html" />
-                    <input type="text" name="name" placeholder="Nome" id="nome">
-                    <input type="email" name="_replyto" placeholder="E-mail" id="email">
-                    <input type="submit" value="Cadastre-se" id="btn-submit">
+                <form id="cadastro" method="post" action="obrigado.html">
+                    <input type="text" name="name" id="name" placeholder="Nome" required>
+                    <input type="email" name="email" id="email" placeholder="E-mail" required>
+                    <input type="submit" value="Cadastre-se">
                 </form>
             </div>
         </section>
