--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ mixpanel.init("0ef9ba638f51ebd93c8cb59f88a572ea");</script><!-- end Mixpanel -->
         <section id="form">
             <h2>Experimente, é simples e rápido!</h2>
             <div class="container">
-                <form id="cadastro" method="post" action="obrigado.html">
+                <form id="cadastro" action="obrigado.html">
                     <input type="text" name="name" id="name" placeholder="Nome" required>
                     <input type="email" name="email" id="email" placeholder="E-mail" required>
                     <input type="submit" value="Cadastre-se">
