Alteracoes de textos e cor do sub titulo

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ title: O.S. Simples
 
 <section id="hero">
     <div class="container">
-        <h2>Simplifique o controle das ordens de serviços</h2>
-        <h3><span>o.s. simples</span> é um sistema online de controle de ordem de serviço para micro e pequenas empresas.</h3>
+        <h2>Simplifique o controle de ordens de serviços</h2>
+        <h3><span>o.s. simples</span> é um sistema online de controle de ordens de serviço para micro e pequenas empresas.</h3>
         <a id="btn-one" class="btn" href="#form" title="Cadastre-se">Cadastre-se</a>
     </div>
 </section>
@@ -27,25 +27,25 @@ title: O.S. Simples
         <div class="grid-2">
             <h4>Orçamento</h4>
             <img src="assets/images/icon-orcamento.png">
-            <p>É criado um orçamento com a descrição do serviço que é enviado para o cliente.</p>
+            <p>Você cria um orçamento com a descrição do serviço e envia para o cliente</p>
         </div>
 
         <div class="grid-2">
             <h4>Aprovação</h4>
             <img src="assets/images/icon-aprovacao.png">
-            <p>O cliente aprova o orçamento.</p>
+            <p>O cliente recebe seu orçamento para aprovação</p>
         </div>
 
         <div class="grid-2">
-            <h4>Pendente</h4>
+            <h4>Ordens de serviço</h4>
             <img src="assets/images/icon-pendente.png">
-            <p>Você acompanha o estado de cada O.S. em uma lista.</p>
+            <p>Quando o cliente aprova seu orçamento, ele se torna uma ordem de serviço</p>
         </div>
 
         <div class="grid-2">
             <h4>Execução</h4>
             <img src="assets/images/icon-execucao.png">
-            <p>A O.S. será executada por um funcionário da empresa.</p>
+            <p>Você acompanha as ordens de serviço que estão sendo executadas pelos funcionários</p>
         </div>
 
         <div class="grid-2">
@@ -55,9 +55,9 @@ title: O.S. Simples
         </div>
 
         <div class="grid-2">
-            <h4>Contato</h4>
+            <h4>Aviso</h4>
             <img src="assets/images/icon-contato.png">
-            <p>Você pode avisar o seu cliente por E-mail ou SMS.</p>
+            <p>Ao finalizar a o.s., seu cliente pode ser avisado automaticamente por e-mail ou SMS</p>
         </div>
 
         <div class="grid-12">
@@ -70,15 +70,15 @@ title: O.S. Simples
         <ul>
             <li class="grid-4">
                 <img src="assets/images/icon-acompanhamento.png">
-                <p>Acompanhamento da O.S.</p>
+                <p>Acompanhe a execução das ordens de serviço</p>
             </li>
             <li class="grid-4">
                 <img src="assets/images/icon-enviar.png">
-                <p>Envie orçamento para os clientes</p>
+                <p>Envie orçamentos para os seus clientes pelo sistema</p>
             </li>
             <li class="grid-4">
                 <img src="assets/images/icon-relatorio.png">
-                <p>Relatório de serviços prestados</p>
+                <p>Visualize relatórios de serviços prestados</p>
             </li>
             <li class="grid-4">
                 <img src="assets/images/icon-nuvem.png">
@@ -86,12 +86,11 @@ title: O.S. Simples
             </li>
             <li class="grid-4">
                 <img src="assets/images/icon-mobile.png">
-                <p>Disponível para diversos dispositivos</p>
+                <p>Disponível em diversos dispositivos</p>
             </li>
             <li class="grid-4">
                 <img src="assets/images/icon-granatum.png">
-                <p>Integração com sistema financeiro*</p>
-                <span>*Intergração com o sistema financeiro <a href="http://www.granatum.com.br" title="Sistema Financeiro Online para Micro e Pequenas Empresas - Granatum">Granatum</a></span>
+                <p>Integre com o sistema financeiro Granatum</p>
             </li>
         </ul>
     </div>
