--- a/obrigado.html
+++ b/obrigado.html
@@ -5,7 +5,7 @@ title: O.S. Simples
 
 <section id="topo">
     <div class="container">
-        <h1><a class="logo" href="www.ossimples.com.br" title="o.s. simples">o.s. simples</a></h1>
+        <h1><a class="logo" href="/" title="o.s. simples">o.s. simples</a></h1>
     </div>
 </section>
 
