Alt das imagens e acerto do h1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: O.S. Simples
 
 <section id="topo">
     <div class="container">
-        <h1><a class="logo" href="#" title="o.s. simples">o.s. simples</a></h1>
+        <h1><a class="logo" href="#" title="o.s. simples">O.S. Simples - Sistema de controle de ordens de serviço online</a></h1>
         <nav>
             <a href="#como-funciona" title="Como funciona?" class="como_funciona">Como funciona?</a>
             <a href="#funcionalidades" title="Funcionalidades" class="funcionalidades">Funcionalidades</a>
@@ -26,37 +26,37 @@ title: O.S. Simples
         <h2>Como funciona o o.s. simples?</h2>
         <div class="grid-2">
             <h4>Orçamento</h4>
-            <img src="assets/images/icon-orcamento.png">
+            <img src="assets/images/icon-orcamento.png" alt="Orçamento">
             <p>Você cria um orçamento com a descrição do serviço e envia para o cliente</p>
         </div>
 
         <div class="grid-2">
             <h4>Aprovação</h4>
-            <img src="assets/images/icon-aprovacao.png">
+            <img src="assets/images/icon-aprovacao.png" alt="Aprovação">
             <p>O cliente recebe seu orçamento para aprovação</p>
         </div>
 
         <div class="grid-2">
             <h4>Ordens de serviço</h4>
-            <img src="assets/images/icon-pendente.png">
+            <img src="assets/images/icon-pendente.png" alt="Ordens de serviço">
             <p>Quando o cliente aprova seu orçamento, ele se torna uma ordem de serviço</p>
         </div>
 
         <div class="grid-2">
             <h4>Execução</h4>
-            <img src="assets/images/icon-execucao.png">
+            <img src="assets/images/icon-execucao.png" alt="Execução">
             <p>Você acompanha as ordens de serviço que estão sendo executadas pelos funcionários</p>
         </div>
 
         <div class="grid-2">
             <h4>Finalizada</h4>
-            <img src="assets/images/icon-finalizada.png">
+            <img src="assets/images/icon-finalizada.png" alt="Finalizada">
             <p>Isso indica que o serviço foi executado.</p>
         </div>
 
         <div class="grid-2">
             <h4>Aviso</h4>
-            <img src="assets/images/icon-contato.png">
+            <img src="assets/images/icon-contato.png" alt="Aviso">
             <p>Ao finalizar a o.s., seu cliente pode ser avisado automaticamente por e-mail ou SMS</p>
         </div>
 
@@ -69,27 +69,27 @@ title: O.S. Simples
 
         <ul>
             <li class="grid-4">
-                <img src="assets/images/icon-acompanhamento.png">
+                <img src="assets/images/icon-acompanhamento.png" alt="Acompanhe a execução das ordens de serviço">
                 <p>Acompanhe a execução das ordens de serviço</p>
             </li>
             <li class="grid-4">
-                <img src="assets/images/icon-enviar.png">
+                <img src="assets/images/icon-enviar.png" alt="Envie orçamentos para os seus clientes pelo sistema">
                 <p>Envie orçamentos para os seus clientes pelo sistema</p>
             </li>
             <li class="grid-4">
-                <img src="assets/images/icon-relatorio.png">
+                <img src="assets/images/icon-relatorio.png" alt="Visualize relatórios de serviços prestados">
                 <p>Visualize relatórios de serviços prestados</p>
             </li>
             <li class="grid-4">
-                <img src="assets/images/icon-nuvem.png">
+                <img src="assets/images/icon-nuvem.png" alt="Acesse de qualquer lugar">
                 <p>Acesse de qualquer lugar</p>
             </li>
             <li class="grid-4">
-                <img src="assets/images/icon-mobile.png">
+                <img src="assets/images/icon-mobile.png" alt="Disponível em diversos dispositivos">
                 <p>Disponível em diversos dispositivos</p>
             </li>
             <li class="grid-4">
-                <img src="assets/images/icon-granatum.png">
+                <img src="assets/images/icon-granatum.png" alt="Integre com o sistema financeiro Granatum">
                 <p>Integre com o sistema financeiro Granatum</p>
             </li>
         </ul>
