H3 com menos caracteres e ajuste do tamanho do Hero para ficar na primeira dobra da pagina

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: O.S. Simples
 <section id="hero">
     <div class="container">
         <h2>Simplifique o controle de ordens de serviços</h2>
-        <h3><span>o.s. simples</span> é um sistema online de controle de ordens de serviço para micro e pequenas empresas.</h3>
+        <h3>Sistema online de ordens de serviço para micro e pequenas empresas.</h3>
         <a id="btn-one" class="btn" href="#form" title="Cadastre-se">Cadastre-se</a>
     </div>
 </section>
