--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ title: O.S. Simples
         <h2>Simplifique o controle de ordens de serviços</h2>
         <h3>Sistema online de ordens de serviço para micro e pequenas empresas.</h3>
         <a id="btn-one" class="btn" href="#form" title="Cadastre-se">Cadastre-se</a>
+        <div class="fb-like" data-href="https://www.facebook.com/sistemaossimples" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
     </div>
 </section>
 <section id="content">
@@ -105,3 +106,12 @@ title: O.S. Simples
         </form>
     </div>
 </section>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
