Ajuste nos titulos

--- a/index.html
+++ b/index.html
@@ -19,44 +19,44 @@ title: O.S. Simples
         <h2>Simplifique o controle de ordens de serviços</h2>
         <h3>Sistema online de ordens de serviço para micro e pequenas empresas.</h3>
         <a id="btn-one" class="btn" href="#form" title="Cadastre-se">Cadastre-se</a>
-        <div class="fb-like" data-href="https://www.facebook.com/sistemaossimples" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+        <div class="fb-like" data-href="https://www.facebook.com/sistemaossimples" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
     </div>
 </section>
 <section id="content">
     <div id="como-funciona" class="container como-funciona">
         <h2>Como funciona o o.s. simples?</h2>
         <div class="grid-2">
-            <h4>Orçamento</h4>
+            <span>Orçamento</span>
             <img src="assets/images/icon-orcamento.png" alt="Orçamento">
             <p>Você cria um orçamento com a descrição do serviço e envia para o cliente</p>
         </div>
 
         <div class="grid-2">
-            <h4>Aprovação</h4>
+            <span>Aprovação</span>
             <img src="assets/images/icon-aprovacao.png" alt="Aprovação">
             <p>O cliente recebe seu orçamento para aprovação</p>
         </div>
 
         <div class="grid-2">
-            <h4>Ordens de serviço</h4>
+            <span>Ordens de serviço</span>
             <img src="assets/images/icon-pendente.png" alt="Ordens de serviço">
             <p>Quando o cliente aprova seu orçamento, ele se torna uma ordem de serviço</p>
         </div>
 
         <div class="grid-2">
-            <h4>Execução</h4>
+            <span>Execução</span>
             <img src="assets/images/icon-execucao.png" alt="Execução">
             <p>Você acompanha as ordens de serviço que estão sendo executadas pelos funcionários</p>
         </div>
 
         <div class="grid-2">
-            <h4>Finalizada</h4>
+            <span>Finalizada</span>
             <img src="assets/images/icon-finalizada.png" alt="Finalizada">
             <p>Isso indica que o serviço foi executado.</p>
         </div>
 
         <div class="grid-2">
-            <h4>Aviso</h4>
+            <span>Aviso</span>
             <img src="assets/images/icon-contato.png" alt="Aviso">
             <p>Ao finalizar a o.s., seu cliente pode ser avisado automaticamente por e-mail ou SMS</p>
         </div>
