otimizacao dos css

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@ title: O.S. Simples
         <h2>Simplifique o controle de ordens de serviços</h2>
         <h3>Sistema online de ordens de serviço para micro e pequenas empresas.</h3>
         <a id="btn-one" class="btn" href="#form" title="Cadastre-se">Cadastre-se</a>
-        <div class="fb-like" data-href="https://www.facebook.com/sistemaossimples" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
     </div>
 </section>
+<div class="container fb">
+    <div class="fb-like" data-href="https://www.facebook.com/sistemaossimples" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
+</div>
 <section id="content">
     <div id="como-funciona" class="container como-funciona">
         <h2>Como funciona o o.s. simples?</h2>
@@ -106,12 +108,3 @@ title: O.S. Simples
         </form>
     </div>
 </section>
-
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
