--- a/obrigado.html
+++ b/obrigado.html
@@ -5,11 +5,11 @@ title: O.S. Simples
 
 <section id="topo">
     <div class="container">
-        <h1><a class="logo" href="/" title="o.s. simples">o.s. simples</a></h1>
+        <h1><a class="logo sprite-logo" href="/" title="o.s. simples">o.s. simples</a></h1>
     </div>
 </section>
 
-<section id="content" class="thanks">
+<section id="content" class="thanks sprite-bg-thanks">
     <div class="container">
         <h2>Obrigado!</h2>
         <h3>Em breve você receberá um convite para ter acesso ao sistema.</h3>
