Campo de telefone

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ title: O.S. Simples
         <form id="cadastro" action="obrigado.html">
             <input type="text" name="name" id="name" placeholder="Nome" required>
             <input type="email" name="email" id="email" placeholder="E-mail" required>
+            <input type="tel" name="phone" id="phone" placeholder="Telefone" required>
             <input type="submit" value="Cadastre-se">
         </form>
     </div>
