--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: O.S. Simples
     <div class="container">
         <h2>Simplifique o controle de ordens de serviços</h2>
         <h3>Sistema online de ordens de serviço para micro e pequenas empresas.</h3>
-        <a id="btn-one" class="btn" href="#form" title="Cadastre-se">Cadastre-se</a>
+        <a id="btn-one" class="btn" href="http://sistema.ossimples.com.br/users/sign_up" title="Cadastre-se">Cadastre-se</a>
     </div>
 </section>
 <div class="container fb">
@@ -53,7 +53,7 @@ title: O.S. Simples
         </div>
 
         <div class="grid-12">
-            <a id="btn-two" class="btn" href="#form" title="Cadastre-se">Cadastre-se</a>
+            <a id="btn-two" class="btn" href="http://sistema.ossimples.com.br/users/sign_up" title="Cadastre-se">Cadastre-se</a>
         </div>
     </div>
     <div id="funcionalidades" class="container facilidades">
@@ -90,11 +90,6 @@ title: O.S. Simples
 <section id="form">
     <h2>Experimente, é simples e rápido!</h2>
     <div class="container">
-        <form id="cadastro" action="obrigado.html">
-            <input type="text" name="name" id="name" placeholder="Nome" required>
-            <input type="email" name="email" id="email" placeholder="E-mail" required>
-            <input type="tel" name="phone" id="phone" placeholder="Telefone" required>
-            <input type="submit" value="Cadastre-se">
-        </form>
+        <a class="btn" href="http://sistema.ossimples.com.br/users/sign_up" title="Cadastre-se">Cadastre-se</a>
     </div>
 </section>
